--- a/CORFOGA/app/src/main/res/layout/farms.xml
+++ b/CORFOGA/app/src/main/res/layout/farms.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    tools:context="com.example.dell.corfoga4.FincaActivity">
+    tools:context="com.example.bryan.corfoga.LoginActivity">
 
     <ListView
         android:layout_width="match_parent"
@@ -17,6 +17,5 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/lista"
         android:footerDividersEnabled="false"
-        android:dividerHeight="5dp"
-        />
+        android:dividerHeight="5dp" />
 </RelativeLayout>
