--- a/CORFOGA/app/src/main/res/layout/regions_list.xml
+++ b/CORFOGA/app/src/main/res/layout/regions_list.xml
@@ -7,37 +7,30 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
         <RelativeLayout
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/activity_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
-
+            android:background="@color/backgroudColor"
             android:paddingBottom="16dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingTop="16dp"
             tools:context="com.example.dell.corfoga4.MainActivity">
-
-
             <Button
                 android:id="@+id/chorotega"
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:backgroundTint="#3f834D"
+                android:backgroundTint="@color/colorPrimaryDark"
                 android:drawableLeft="@drawable/chorotega75px"
-
                 android:drawablePadding="8dp"
                 android:minHeight="140dp"
                 android:text="Región Chorotega"
                 android:textColor="@android:color/white" />
-
             <Button
                 android:text="Región Huetar Norte"
                 android:layout_width="match_parent"
@@ -50,8 +43,7 @@
                 android:drawableLeft="@drawable/huetar_norte75px"
                 android:drawablePadding="8dp"
                 android:textColor="@android:color/white"
-                android:backgroundTint="#3f834D" />
-
+                android:backgroundTint="@color/colorPrimaryDark" />
             <Button
                 android:text="Región Brunca"
                 android:layout_width="match_parent"
@@ -64,8 +56,7 @@
                 android:drawableLeft="@drawable/brunca75px"
                 android:drawablePadding="8dp"
                 android:textColor="@android:color/white"
-                android:backgroundTint="#3f834D" />
-
+                android:backgroundTint="@color/colorPrimaryDark" />
             <Button
                 android:text="Región Huetar Atlántica"
                 android:layout_width="match_parent"
@@ -78,8 +69,7 @@
                 android:drawableLeft="@drawable/huetar_atlantica75px"
                 android:drawablePadding="8dp"
                 android:textColor="@android:color/white"
-                android:backgroundTint="#3f834D" />
-
+                android:backgroundTint="@color/colorPrimaryDark" />
             <Button
                 android:text=" Region Central"
                 android:layout_width="match_parent"
@@ -92,8 +82,7 @@
                 android:drawableLeft="@drawable/central75px"
                 android:drawablePadding="8dp"
                 android:textColor="@android:color/white"
-                android:backgroundTint="#3f834D" />
-
+                android:backgroundTint="@color/colorPrimaryDark" />
             <Button
                 android:text="Region Pacífico Central"
                 android:layout_width="match_parent"
@@ -106,8 +95,7 @@
                 android:drawableLeft="@drawable/pacifico_central75px"
                 android:drawablePadding="8dp"
                 android:textColor="@android:color/white"
-                android:backgroundTint="#3f834D" />
-
+                android:backgroundTint="@color/colorPrimaryDark" />
             <Button
                 android:text="Todo el País"
                 android:layout_width="match_parent"
@@ -120,8 +108,7 @@
                 android:drawableLeft="@drawable/todas75px"
                 android:drawablePadding="8dp"
                 android:textColor="@android:color/white"
-                android:backgroundTint="#3f834D" />
-
+                android:backgroundTint="@color/colorPrimaryDark" />
         </RelativeLayout>
         <LinearLayout
             android:id="@+id/progressBarLayout"
@@ -133,14 +120,11 @@
             android:visibility="gone"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true">
-
             <ProgressBar
                 android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
-
                 android:layout_height="wrap_content"
                 android:layout_weight="0.10" />
-
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
@@ -151,11 +135,6 @@
                 android:textAlignment="center"
                 android:textColor="#ffffff"
                 android:textSize="16sp" />
-
         </LinearLayout>
-
-
-
     </RelativeLayout>
-
 </ScrollView>
