--- a/CORFOGA/app/src/main/res/values/colors.xml
+++ b/CORFOGA/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="progressColor">#256b09</color>
+    <color name="backgroudColor">#ffffff</color>
 </resources>
