--- a/CORFOGA/app/src/main/res/layout/animals_list.xml
+++ b/CORFOGA/app/src/main/res/layout/animals_list.xml
@@ -15,6 +15,6 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/listaAnimal"
+        android:id="@+id/listAnimals"
         android:footerDividersEnabled="false" />
 </RelativeLayout>
