--- a/CORFOGA/app/src/main/res/layout/activity_login.xml
+++ b/CORFOGA/app/src/main/res/layout/activity_login.xml
@@ -5,12 +5,8 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
+    android:padding="16dp"
     tools:context="com.example.bryan.corfoga.LoginActivity">
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +27,7 @@
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/nombreUsuario"
-            android:hint="Nombre de usuario"/>
+            android:hint="@string/userName"/>
         <EditText
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
@@ -39,10 +35,10 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/contraseña"
-            android:hint="Contraseña" />
+            android:hint="@string/password" />
         <Button
             android:layout_marginTop="16dp"
-            android:text="Ingresar"
+            android:text="@string/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/login"
@@ -65,12 +61,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="0.37"
-                android:textColor="@color/progressColor"
-                android:text="Espere mientras termina la transacción"
+                android:textColor="@color/colorPrimary"
+                android:text="@string/loading"
                 android:textSize="16sp"
                 android:gravity="center"
-                android:textAlignment="center"
-                />
+                android:textAlignment="center" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
