--- a/CORFOGA/app/src/main/res/layout/farms.xml
+++ b/CORFOGA/app/src/main/res/layout/farms.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/lista"
+        android:id="@+id/listFarms"
         android:footerDividersEnabled="false"
         android:dividerHeight="5dp" />
 </RelativeLayout>
