--- a/CORFOGA/app/src/main/res/layout/farms.xml
+++ b/CORFOGA/app/src/main/res/layout/farms.xml
@@ -4,10 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
+    android:padding="@dimen/paddingAll"
     tools:context="com.example.bryan.corfoga.LoginActivity">
 
     <ListView
