--- a/CORFOGA/app/src/main/res/layout/activity_farms.xml
+++ b/CORFOGA/app/src/main/res/layout/activity_farms.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.bryan.corfoga.FarmActivity">
+    tools:context="com.example.bryan.corfoga.Activity.FarmActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
