--- a/CORFOGA/app/src/main/res/layout/activity_inspection.xml
+++ b/CORFOGA/app/src/main/res/layout/activity_inspection.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.bryan.corfoga.InspectionActivity">
+    tools:context="com.example.bryan.corfoga.Activity.InspectionActivity">
     <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
