--- a/CORFOGA/app/src/main/res/layout/activity_login.xml
+++ b/CORFOGA/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context="com.example.bryan.corfoga.LoginActivity">
+    tools:context="com.example.bryan.corfoga.Activity.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
