--- a/CORFOGA/app/src/main/res/layout/activity_regions.xml
+++ b/CORFOGA/app/src/main/res/layout/activity_regions.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.bryan.corfoga.RegionsActivity">
+    tools:context="com.example.bryan.corfoga.Activity.RegionActivity">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
