--- a/CORFOGA/app/src/main/res/layout/activity_login.xml
+++ b/CORFOGA/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/nombreUsuario"
+            android:id="@+id/userName"
             android:hint="@string/userName"/>
         <EditText
             android:layout_marginTop="16dp"
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/contraseña"
+            android:id="@+id/password"
             android:hint="@string/password" />
         <Button
             android:layout_marginTop="16dp"
