--- a/CORFOGA/app/src/main/res/values/colors.xml
+++ b/CORFOGA/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#EBEAE8</color>
+    <color name="colorPrimary">#228F2E</color>
     <color name="darkGray">#D4D2BE</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="progressColor">#256b09</color>
     <color name="backgroudColor">#FFFFFF</color>
     <color name="backgroudColor11111">#3F51B5</color>
+    <color name="colorWords">#2E7024</color>
 </resources>
