--- a/CORFOGA/app/src/main/res/layout/activity_animal.xml
+++ b/CORFOGA/app/src/main/res/layout/activity_animal.xml
@@ -9,11 +9,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/Lista"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/listFarm"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_marginLeft="20dp"
+            android:textColor="@color/colorWords"/>
+
         <ListView
+            android:id="@+id/listFarms"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/listFarms"
+            android:layout_gravity="center"
+            android:divider="@color/colorWords"
+            android:dividerHeight="1dp"
             android:footerDividersEnabled="false"
-            android:dividerHeight="5dp" />
+            android:padding="10dp" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
