--- a/CORFOGA/app/src/main/res/menu/menu_buscador_fincas.xml
+++ b/CORFOGA/app/src/main/res/menu/menu_buscador_fincas.xml
@@ -4,16 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="MainActivity">
     <item
-        android:id="@+id/buscarAnimal"
-        android:title="@string/buscarAnimal"
+        android:id="@+id/buscarFincas"
         android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/buscarFinca"
         android:tint="@android:color/white"
         app:actionViewClass="ifRoom|collapseActionView"
         app:showAsAction="always"/>
 
 </menu>
-
-
 
 
 
