Documentacion y Alerta de inspeción
- Se creo la vista de la alerta de la inspeción
- Documentación interna en algunas partes

--- a/CORFOGA/app/src/main/res/values/colors.xml
+++ b/CORFOGA/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Colores que se van a utilizar en la aplicación -->
     <color name="colorPrimary">#228F2E</color>
     <color name="darkGray">#D4D2BE</color>
     <color name="colorPrimaryDark">#303F9F</color>
