--- a/CORFOGA/app/src/main/res/menu/menu_buscador_animal.xml
+++ b/CORFOGA/app/src/main/res/menu/menu_buscador_animal.xml
@@ -8,8 +8,8 @@
         android:title="@string/buscarAnimal"
         android:icon="@android:drawable/ic_menu_search"
         android:tint="@android:color/white"
-        app:actionViewClass="ifRoom|collapseActionView"
-        app:showAsAction="always"/>
+        app:actionViewClass="android:support.v7.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView"/>
 
 </menu>
 
