--- a/CORFOGA/app/src/main/res/values/colors.xml
+++ b/CORFOGA/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimary">#228F2E</color>
     <color name="darkGray">#D4D2BE</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colortitle">#111</color>
     <color name="colorAccent">#FF4081</color>
     <color name="progressColor">#256b09</color>
     <color name="backgroudColor">#FFFFFF</color>
