--- a/CORFOGA/app/src/main/res/values/colors.xml
+++ b/CORFOGA/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="progressColor">#256b09</color>
     <color name="backgroudColor">#FFFFFF</color>
     <color name="backgroudColor11111">#3F51B5</color>
+    <color name="botones">#333399</color>
     <color name="colorWords">#2E7024</color>
 </resources>
