--- a/CORFOGA/app/src/main/res/layout/activity_inspection.xml
+++ b/CORFOGA/app/src/main/res/layout/activity_inspection.xml
@@ -229,7 +229,8 @@
                         android:id="@+id/spinAlimentacion"
                         android:layout_weight="2"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:entries="@array/alimento"/>/>
                 </LinearLayout>
 
                 <LinearLayout
