--- a/CORFOGA/app/src/main/res/values/colors.xml
+++ b/CORFOGA/app/src/main/res/values/colors.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Colores que se van a utilizar en la aplicación -->
     <color name="colorPrimary">#228F2E</color>
     <color name="darkGray">#D4D2BE</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colortitle">#111</color>
     <color name="colorAccent">#FF4081</color>
     <color name="progressColor">#256b09</color>
     <color name="backgroudColor">#FFFFFF</color>
     <color name="backgroudColor11111">#3F51B5</color>
+    <color name="botones">#333399</color>
     <color name="colorWords">#2E7024</color>
 </resources>
